--- a/main.css
+++ b/main.css
@@ -33,15 +33,15 @@ header {
 
 .logo-img {
     float: left;
-    margin-left: 13.5%;
-    margin-top: 4.5%
+    margin-left: 15%;
+    margin-top: 5%
 }
 
 .logo-txt {
     float: left;
     font-family: "Calibri";
-    margin-top: 1.5%;
-    margin-left: 3.5%
+    margin-top: 5%;
+    margin-left: 10%
 }
 
 .orange {
@@ -66,11 +66,22 @@ nav {
     float: right;
     margin-left: 6%;
     margin-top: 3%;
-    text-align: center
+    text-align: center;
+    height: 12vh;
+}
+
+.icon {
+    height: 60%;
+}
+
+.contact {
+    margin-top: 8%;
+    height: 56%;
 }
 
 .icon-txt {
-    text-align: center
+    text-align: center;
+    height: 40%;
 }
 
 main{
@@ -99,7 +110,7 @@ main{
 }
 
 .intro-txt-rabbits {
-    width: 25%;
+    width: 35%;
     position: absolute;
     top: 30%;
     left: 13%;
@@ -112,7 +123,7 @@ main{
 }
 
 .intro-txt-orange {
-    width: 25%;
+    width: 35%;
     position: absolute;
     top: 50%;
     left: 13%;
@@ -135,6 +146,7 @@ main{
     font-family: "Calibri";
     width: 22%;
     padding: 0.5% 1.5%;
+    margin-top: 1%;
     font-size: 15px;
     text-align: justify
 }
@@ -142,19 +154,20 @@ main{
 a{
     text-decoration: none;
     color: rgb(255, 175, 18);
-    float: right
+    float: right;
+    margin-top: 2%;
 }
 
 .info{
     float: left;
     width: 88%;
-    margin: 1.3% 12% 0% 12.5%
+    margin: 3% 13%;
 }
 
 h1{
-    width: 18%;
+    width: 20%;
     color: rgb(255, 175, 18);
-    margin-left: 40%
+    margin-left: 41%
 }
 
 .team-member{
@@ -167,7 +180,8 @@ h1{
 .photo{
     width: 90%;
     border-radius: 100%;
-    border: rgb(255, 175, 18) solid 5px
+    border: rgb(255, 175, 18) solid 5px;
+    margin: 5% 0%;
 }
 
 .about{
@@ -190,12 +204,17 @@ h1{
 
 .name{
     color: rgb(110, 109, 107);
+    margin-right: 2%;
 }
 
 h2{
     width: 25%;
     color: rgb(255, 175, 18);
     margin-left: 45%
+}
+
+input {
+    padding-left: 2%;
 }
 
 label{
@@ -206,17 +225,19 @@ label{
 .text-field{
     margin: 1% 2%;
     background-color: rgb(247, 246, 245);
-    width: 70%;
+    width: 68%;
     border-left: rgb(209, 208, 207) solid 5px;
     border-top: rgb(209, 208, 207) solid 2px;
 }
 
-.button{
+button{
     background-color: rgb(255, 175, 18);
     color:white;
-    width: 5%;
+    width: 12%;
+    height: 5%;
     position: absolute;
-    left: 78.5%
+    left: 78.5%;
+    font-size: 18px;
 }
 
 #message-field{
